--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.6",
     "qs": "^6.14.0",
+    "sanitize-html": "^2.17.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
